# ros_kinect

./: .gitattributes  CMakeLists.txt  README.md  install.sh  package.xml
src/: HumanTracker.h  HumanTracker.hpp  KinectAPI.hpp  NiteSampleUtilities.h  compile.sh  main.cpp  openni_kinect_sample.cpp
